Bug 1268014 - downgrade message to plain text if it only contains our moz- classes. r=jorgk